# assigment-Bewise

./: .env.example  .gitignore  Makefile  README.md  TEST_ASSIGMENT.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 87e5fd6ef53e_init.py
src/: config.py  database.py  main.py  utils.py
src/questions/: db_models.py  dependencies.py  router.py  schemas.py  services.py
